# gl-paint

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  configure-dbg.sh  configure-dev.sh  configure-rel.sh  imgui.ini  todo.txt
.github/workflows/: ci.yml
assets/: CMakeLists.txt
config/: CMakeLists.txt  config.hpp.in
include/: App.hpp  CMakeLists.txt  Shader.hpp  Window.hpp  Window.tpp  common.hpp
include/editor_layer/: EditorLayer.hpp
include/events/: CMakeLists.txt  Event.hpp
include/gl_layer/: CMakeLists.txt  Framebuffer.hpp  GLLayer.hpp  ImageTransform.hpp  Quad.hpp  Sampler.hpp  Shader.hpp  ShadersRepository.hpp  StorageBufferObject.hpp  Texture2D.hpp  Texture2DArray.hpp  Workspace.hpp
include/ui_layer/: CMakeLists.txt  UILayer.hpp
include/utils/: CMakeLists.txt  RingQueue.hpp  RingQueue.tpp  image_ops.hpp
include/window_layer/: CMakeLists.txt  Window.hpp  Window.tpp  WindowLayer.hpp
res/: CMakeLists.txt
res/imgui_bindings/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
res/stbi/: stbi.cpp
shaders/: .ninja_log  CMakeLists.txt  build.ninja
shaders/src/basic_shader/: shader.frag  shader.vert
shaders/src/main_shader/: shader.frag  shader.vert
shaders/src/workspace_viewport_shader/: shader.frag  shader.vert
src/: App.cpp  CMakeLists.txt  Shader.cpp  Window.cpp  main.cpp
src/gl_layer/: CMakeLists.txt  Framebuffer.cpp  GLLayer.cpp  Quad.cpp  Sampler.cpp  Shader.cpp  ShadersRepository.cpp  StorageBufferObject.cpp  Texture2D.cpp  Texture2DArray.cpp  Workspace.cpp
src/ui_layer/: CMakeLists.txt  UILayer.cpp
src/utils/: CMakeLists.txt  image_ops.cpp
src/window_layer/: CMakeLists.txt  Window.cpp  WindowLayer.cpp
